fix: App层下载订阅绕过403 + 过滤广告伪节点
借鉴 FlClash 方案：
- proxy-provider 改为 type:file，订阅文件由 App 层(downloadSubscription)下载
- 下载时用6个常见 clash UA 依次尝试，绕过机场对 mihomo 内置 UA 的 403 拦截
- 下载内容做 clash 格式校验，原子写入 providers/ 目录
- "更新订阅"按钮改为重新下载订阅文件 + 热重载（file provider 不支持 API 刷新）

延迟测试修复：
- 组延迟测试先取 /proxies 全局映射，按 type 过滤掉广告/伪节点
  (机场塞的"🇦🇶 [到期:...]"、"✅中文官网"等非真实代理，测延迟必 404)
- isRealProxyType 白名单：Shadowsocks/VMess/VLESS/Trojan/Hysteria2/TUIC 等
- 节点名做 URLEncoder 编码(空格用%20)，支持中文/emoji/方括号节点名
- fetchNodeList 同步过滤伪节点，避免账号卡片下拉塞满广告